k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-iadt-deployment
  namespace: iadt
  labels:
    app: hackaton-iadt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackaton-iadt
  template:
    metadata:
      labels:
        app: hackaton-iadt
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: hackaton-iadt
          image: ghcr.io/curtisyoung/hackatoniadt:latest
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
              ephemeral-storage: "512Mi"
          volumeMounts:
            - name: shared-data
              mountPath: /app/data
          command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: hackaton-iadt-data-pvc
      restartPolicy: Always
