k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hackaton-iadt-redis
  namespace: iadt
  labels:
    app: hackaton-iadt-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackaton-iadt-redis
  template:
    metadata:
      labels:
        app: hackaton-iadt-redis
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        fsGroup: 999
      containers:
        - name: redis
          image: public.ecr.aws/docker/library/redis:7-alpine
          securityContext:
            allowPrivilegeEscalation: false
            privileged: false
            capabilities:
              drop:
                - ALL
          args: ["redis-server", "--save", "", "--appendonly", "no"]
          ports:
            - containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 20
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
          # No persistence, runs purely in memory
