k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hackaton-iadt-ingress
  namespace: iadt
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: cloudflare-origin-ca
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-cache: "off"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/client-max-body-size: "50m"
spec:
  rules:
    - host: iadt.matheuslucena.dev
      http:
        paths:
          - path: /mcp
            pathType: Prefix
            backend:
              service:
                name: hackaton-iadt-mcp-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hackaton-iadt-service
                port:
                  number: 80
  tls:
    - hosts:
        - iadt.matheuslucena.dev
      secretName: iadt-tls-secret
